<resources>
    <string name="app_name">OAKSTUDIO.TV</string>
    <string name="facebook">FACEBOOK</string>
    <string name="err_no_internet">No I/nternetr Connection Available</string>
    <string name="validEmail">Enter Valid Email</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="notification_channel_id">Notification</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Carol Danvers becomes one of the universe\'s most powerful
        heroes when Earth is caught in the middle of a galactic war between
        two alien races</string>
    <string name="confirmation">Please verify following Benificiary                 is the correct Account Holder for the                 Bank Account number provide</string>
    <string name="text_paypal">Click the Continue to PayPal button and log in to Paypal</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirm!</string>
    <string name="network_error">No internet connection detected. Please enable internet connectivity.</string>
    <string name="do_you_want_to_close_the_app">Do you want to close the app?</string>
    <string name="logout">Logout!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="video">Video</string>
    <string name="radio_player">Radio Player</string>
    <string name="video_player">Video Player</string>
    <string name="quality">Quality</string>
    <string name="Subtitle">Subtitle</string>
    <string name="audio">Audio</string>
    <string name="are_you_sure_you_want_to_remove_this_video">Are you sure you want to remove this video?</string>
    <string name="are_you_sure_you_want_to_remove_this_recently_view_video">Are you sure you want to remove this recently viewed video?</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
    <string name="resume_watching">Resume Watching</string>
    <string name="would_you_like_to_resume_watching">Would you like to resume watching from where you left off at</string>
    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder</string>
    <string name="unexpected_intent_action">Unexpected intent action</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="download_playlist_unsupported">This  app does not support downloading playlists</string>
    <string name="download_drm_unsupported">This  app does not support downloading protected content</string>
    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
    <string name="download_ads_unsupported">IMA does not support offline ads</string>
    <string name="prefer_extension_decoders">Prefer extension decoders</string>
    <string name="random_abr">Enable random ABR</string>
    <string name="whoops">Whoops!</string>
    <string name="validation_title">We need just a few more details:</string>
    <string name="email_invalid">Valid email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_not_match">Password doesn\'t match, please check</string>
    <string name="password_valid">Password should be at least 6 characters long.</string>
    <string name="monthly">Monthly</string>
    <string name="quartly">Quarterly</string>
    <string name="yearly">Yearly</string>
    <string name="basic">Basic</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="first_and_last_name">First and Last Name<font color="red">*</font></string>
    <string name="firstname">First Name <font color="red">*</font></string>
    <string name="lastname">Last Name <font color="red">*</font></string>
    <string name="phone">Phone<font align="right" color="red">*</font></string>
    <string name="addres">Address <font color="red">*</font></string>
    <string name="emailid">Email Id <font color="red">*</font></string>
    <string name="message">Message </string>
    <string name="resume">Resume <font color="red">*</font></string>
    <string name="plan_without_logout"><font color="red">Logout</font></string>
    <string name="low"> <font size="30">Low</font></string>
    <string name="Medium"> <font size="30">Medium</font></string>
    <string name="high"> <font size="30">High</font></string>
    <string name="Low_descriptiom"> <font size="10">It will save your data</font></string>
    <string name="small_descriptiom"> <font size="10">Download faster and uses less storage</font></string>
    <string name="Medium_descriptiom"> <font size="10">Download faster and uses less storage</font></string>
    <string name="high_descriptiom"> <font size="10">Uses more Storage</font></string>
    <string name="download_error"><font size="10">Sorry this video is not supporting downloadable format</font></string>
    <string name="email_support">Click the button "Contact Us",ask your question and receive a response to the email</string>
    <string name="supported_device">As a Oakstudio subscriber, you’ll be able to stream your favorite content from the comfort of your very own couch to the confines of public transportation using any one of our supported devices. The available content and features will vary depending on your plan and the version of the app supported by your device. Help Center</string>
    <string name="support_oakstudio">Oakstudio Streaming Oakstudio is a streaming service that allows our members to watch a wide variety of award-winning TV shows, movies, documentaries, and more on thousands of internet-connected devices. With Oakstudio, you can enjoy unlimited ad-free viewing of our content. There is always something new to discover, and more TV shows and movies are added every month! If you are already a member and would like to learn more about using Oakstudio, visit Getting started with Oakstudio.</string>
    <string name="support_freetrails">Free trials are currently not offered in your country. To start your new membership, simply go to https://oakstudio.azurewebsites.net/, choose a plan and payment option that’s best for you, enter your email, set a password, and start watching. Oakstudio members get instant access to the entire catalog of TV shows and movies. Information about streaming plans, devices, and more can be found in What is Oakstudio? Once you have started your membership with Oakstudio, you can cancel anytime.</string>
    <string name="support_billing_pay">Oakstudio is a prepaid subscription service that allows you to watch unlimited TV shows and movies on all of your devices, from laptops to TVs, phones, and tablets. Oakstudio members are automatically charged monthly on the date they signed up. Read on for more information about Oakstudio prices, payment methods, charges, and more. If you’re new to Oakstudio and want to know more about the service, visit Getting Started with Oakstudio.</string>
    <string name="Contact_us">Contact Us</string>
    <string name="blog">Blog</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_us">Terms Of Use</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="user_logout">Logout</string>
    <string name="help_information">HELP &amp; INFORMATION</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="career">Career</string>
    <string name="_4k_uhd">4K UHD</string>
    <string name="oakstudio_supported_devices">Oakstudio Supported Devices</string>
    <string name="support_getting_started">Getting Started</string>
    <string name="support_what_is_oakstudio">What is Oakstudio?</string>
    <string name="about_free_trials">About Free Trials</string>
    <string name="support_oakstudio_billing_and_payments">Oakstudio Billing and Payments</string>
    <string name="support_regarding_audio_video">Issue regarding audio and video</string>
    <string name="support_contacting_quick_answer">Before contacting support,you can quickly find answers to commmon questions.</string>
    <string name="support_issue">In few words,please tell us what your issue is.</string>
    <string name="advanced_search">ADVANCED SEARCH</string>
    <string name="searching_process">Search......</string>
    <string name="support_faq">FAQ</string>
    <string name="support_email_support">EMAIL SUPPORT</string>
    <string name="support_contact_us_by_email">CONTACT US BY EMAIL</string>
    <string name="featured_support_categories">FEATURED SUPPORT CATEGORIES</string>
    <string name="disc_plus_digital">Disc Plus Digital</string>
    <string name="support_account_management">Account Management</string>
    <string name="support_movies_anywhere">Movies Anywhere</string>
    <string name="support_mobile_disc_to_digital">Mobile Disc-To-Digital</string>
    <string name="billing">Billing</string>
    <string name="support_ultra_violet">Ultra Violet</string>
    <string name="support_networking">Networking</string>
    <string name="support_promotions">Promotions</string>
</resources>