<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragment.FragmentHelpandInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/help_information"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/about_us"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:id="@+id/tv_support"
            android:text="@string/support"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/tv_career"
            android:padding="5dp"
            android:text="@string/career"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/Contact_us"
            android:id="@+id/tv_contactus"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/blog"
            android:id="@+id/tv_blog"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/tv_privacypolicy"
            android:padding="5dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/tv_terms"
            android:padding="5dp"
            android:text="@string/terms_of_us"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />

        <TextView
            android:id="@+id/tv_cookie_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/cookie_policy"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_logout"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/user_logout"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/editText" />




    </LinearLayout>

</ScrollView>