<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_layout"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp30"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/action_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/tv_quality"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp10"
        android:scrollbars="vertical"
        android:text="@string/quality"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="visible" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp2"
        android:layout_marginBottom="@dimen/dp2"
        android:padding="@dimen/dp10"
        android:text="@string/Subtitle"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="visible" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/tv_multi_audio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp2"
        android:layout_marginBottom="@dimen/dp2"
        android:padding="@dimen/dp10"
        android:text="@string/audio"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="visible" />
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="gone"
        android:textAllCaps="true" />


</LinearLayout>
